--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="color-block--yellow">
       <div class="hello-divya l--padding-above--medium">
         <h1 class="t--futura t--salutations l--padding-below--small">Hello, my name is Divya.</h1>
-        <p class="t--georgia t--introduction"> I’m currently a web developer apprentice at <strong><a href="http://seesparkbox.com" >Sparkbox</a></strong> in Dayton, OH. I'm looking for a full-time web developer/designer position post-apprenticeship in June. You can contact me at <a href="mailto:hello@shortdiv.com">hello [at] shortdiv.com</a></p>
+        <p class="t--georgia t--introduction"> I’m currently a web developer apprentice at <strong><a href="http://seesparkbox.com" >Sparkbox</a></strong> in Dayton, OH. I'm looking for a full-time web developer/designer position post-apprenticeship in June. You can check out my <a href="/resume">resume here</a>. Email me at <a href="mailto:hello@shortdiv.com">hello [at] shortdiv.com</a> if you'd like to chat.</p>
         <ul class="socialicons clearfix">
           <li><a href="http://github.com/shortdiv" class="socialicons--github"></a></li>
           <li><a href="http://instagram.com/shortdiv" class="socialicons--instagram"></a></li>
